PHP                                                                        NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? ??? 2004, PHP 5.1.0
- Upgraded PCRE library to version 5.0. (Andrei)
- Added array type hinting. (Dmitry)
- Removed php_check_syntax() function which never worked properly. (Ilia)
- Removed garbage manager in Zend Engine which results in more aggressive
  freeing of data. (Dmitry, Andi)
- Moved extensions to PECL:
  . ext/cpdf        (Tony, Derick)
  . ext/dio         (Jani, Derick)
  . ext/fam         (Jani, Derick)
  . ext/ingres_ii   (Jani, Derick)
  . ext/mnogosearch (Jani, Derick)
  . ext/w32api      (Jani, Derick)
  . ext/yp          (Jani, Derick)
- Changed stream_filter_(ap|pre)pend() to return resource. (Sara)
- Changed mysqli_exception and sqlite_exception to use RuntimeException as base 
  if SPL extension is present. (Georg, Marcus)
- Improved interactive mode of PHP CLI (php -a). (Johannes, Marcus)
- Improved support for embedded server in mysqli. (Georg)
- Improved performance of:
  . general execution/compilation. (Andi, Thies, Sterling, Dmitry, Marcus)
  . switch() statement. (Dmitry)
  . several array functions. (Marcus)
  . virtual path handling by adding a realpath() cache. (Andi)
  . variable fetches. (Andi)
  . magic method invocations. (Marcus)
- Improved extension SPL (Marcus).
  . added standard hierarchy of Exception classes
  . added interface Countable
  . added interfaces Subject and Observer
  . added spl_autoload*() functions
  . converted several 5.0 examples into c code
  . added class FileObject
  . added possibility to use a string with class_parents() and
    class_implements(). (Andrey)
- Added the tidy_get_opt_doc() function to return documentation for
  configuration options in tidy. (Patch by: nlopess@php.net)
- Added support for .cc files in extensions. (Brian)
- Added imageconvolution() function which can be used to apply a custom 3x3