@@ -2,6 +2,7 @@ PHP                                                                        NEWS
 |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
 ?? ??? 2004, PHP 5.1.0
 - Upgraded PCRE library to version 5.0. (Andrei)
+- Added an optional remove old session parameter to session_regenerate_id(). (Ilia)
 - Added array type hinting. (Dmitry)
 - Removed php_check_syntax() function which never worked properly. (Ilia)
 - Removed garbage manager in Zend Engine which results in more aggressive
